--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<maven.compiler.source>15</maven.compiler.source>
 		<maven.compiler.target>15</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -22,7 +23,7 @@
 		<dependency>
 			<groupId>net.imyeyu.pixelfx</groupId>
 			<artifactId>PixelFX</artifactId>
-			<version>1.0</version>
+			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imyeyu.cb</groupId>
@@ -47,7 +48,7 @@
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>net.imyeyu.cbfx.Launcher</mainClass>
+									<mainClass>net.imyeyu.cbfx.CubicBezierFX</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
